# MonsterOps

./: .deepsource.toml  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a1c2e3f4b5d6_admin_totp.py  a2f9c4b1e837_phase13_notifications.py  a4d1c7e6b520_firewall_autoblock.py  a9d4e7f2c1b5_realms_proxy.py  a9f3e2b1c0d8_retrograde_stop_trigger.py  b3e9a1f72c04_radpostauth_extra_columns.py  b6f2d8a3e91c_vpn_tunnels.py  b7d3f1e92a05_radpostauth_station_class_columns.py  b7f2c9a4e1d3_nas_reachability.py  b8e3f1a2d9c4_firewall_set_managed_source.py  c1f7b4a9d2e6_keyset_pagination_indexes.py  c2a8f4e71b93_radacct_unique_index_and_nasreload.py  c3e5a7b9d1f2_tacacs.py  c3f1a8e20d74_nas_manager.py  c7a1e3f92b84_nas_groups.py  c9e4b1f2a8d5_phase14_integrations.py  d1e5f8a2c3b7_phase15_apikeys_scheduler.py  d2e8b3f1a9c7_mr_bulk_jobs.py  d3b7f0a15c92_firewall_block_event.py  d4b2f6c81e93_nas_config_history.py  d4f6b8c0e2a3_tacacs_command_rules.py  e1f4a9c2b6d8_mr_webhook_subs.py  e3a7f1c90d52_group_access_types.py  e5c9a1f3d827_auth_framework.py  e7a9c1b3d5f4_tacacs_accounting.py  e7c3a9d15f84_firewall.py  e85388a04f39_initial_schema.py  f2a8c4d97b16_log_table_indexes.py  f3a7c1e2d9b4_mr_automation_rules.py  f4c8d2a91b37_phase9_auth_enrichment.py  fd99a6deb43d_add_audit_log.py
deploy/: install.sh  provision-ad.sh  provision-sudoers.sh  provision-vpn.sh  upgrade.sh
deploy/freeradius/mods-available/: sql
docs/: active-directory-auth.md  reference.md  user-guide.md
monsterops/: __init__.py  app.py  cli.py  config.py  database.py  events.py  geo.py  keyrotate.py  pagination.py  radius_reload.py
monsterops/modules/accounting/: coa.py  models.py  radius.dict  router.py  schemas.py
monsterops/modules/accounting/static/: accounting.js  manifest.json
monsterops/modules/apikeys/: models.py  router.py  schemas.py  v1.py
monsterops/modules/apikeys/static/: apikeys.js  manifest.json
monsterops/modules/auth/: models.py  router.py  schemas.py  totp.py  utils.py
monsterops/modules/auth_logs/: models.py  router.py  schemas.py
monsterops/modules/auth_logs/static/: auth_logs.js  manifest.json
monsterops/modules/automation/: engine.py  models.py  router.py
monsterops/modules/automation/static/: automation.js  manifest.json
monsterops/modules/dashboard/: router.py  schemas.py
monsterops/modules/dashboard/static/: dashboard.js  manifest.json
monsterops/modules/firewall/: generator.py  geoblock.py  models.py  nft.py  presets.py  router.py  schemas.py  service.py  validators.py  worker.py
monsterops/modules/firewall/static/: firewall.js  manifest.json
monsterops/modules/groups/: models.py  router.py  schemas.py
monsterops/modules/groups/static/: groups.js  manifest.json
monsterops/modules/health/: router.py  schemas.py
monsterops/modules/health/static/: health.js  manifest.json
monsterops/modules/integrations/: graylog_client.py  models.py  router.py  schemas.py  zabbix_client.py
monsterops/modules/integrations/static/: integrations.js  manifest.json
monsterops/modules/ip_pools/: models.py  router.py  schemas.py
monsterops/modules/ip_pools/static/: ip_pools.js  manifest.json
monsterops/modules/nas/: models.py  probe.py  radius_attr_hints.py  router.py  schemas.py
monsterops/modules/nas/static/: manifest.json  nas.js
monsterops/modules/nas_manager/: crypto.py  history.py  models.py  radius_deploy.py  router.py  schemas.py  service.py  vendor_map.py  worker.py
monsterops/modules/nas_manager/static/: manifest.json  nas_manager.js
monsterops/modules/notifications/: channels.py  models.py  router.py  schemas.py  worker.py
monsterops/modules/notifications/static/: manifest.json  notifications.js
monsterops/modules/radius_logs/: router.py
monsterops/modules/radius_logs/static/: manifest.json  radius_logs.js
monsterops/modules/realms/: ldap_probe.py  ldap_sync.py  models.py  probe.py  proxyconf.py  radius.dict  router.py  schemas.py
monsterops/modules/realms/enforcement/: __init__.py  base.py  freeradius.py
monsterops/modules/realms/static/: manifest.json  (+1 more)
monsterops/modules/reports/: router.py  schemas.py
monsterops/modules/scheduler/: jobs.py  models.py  router.py  schemas.py  service.py
monsterops/modules/system/: router.py
monsterops/modules/tacacs/: accounting.py  auth.py  authorization.py  models.py  protocol.py  router.py  schemas.py  server.py  snippets.py
monsterops/modules/users/: models.py  router.py  schemas.py
monsterops/modules/vpn/: models.py  router.py  schemas.py  service.py  wgkeys.py  worker.py
monsterops/modules/webhooks/: handler.py  models.py  router.py
monsterops/plugins/: loader.py
monsterops/static/: index.html
monsterops/static/css/: theme.css
monsterops/static/js/: api.js  app.js  loader.js  router.js
scripts/: mr-firewall-panic.sh
tests/: conftest.py  test_accounting.py  test_apikeys.py  test_auth.py  test_auth_logs.py  test_automation.py  test_dashboard.py  test_firewall.py  test_groups.py  test_health.py  test_integrations.py  test_ip_pools.py  test_nas.py  test_nas_manager.py  test_notifications.py  test_pagination.py  test_realms.py  test_reports.py  test_scheduler.py  test_system.py  test_users.py  test_vpn.py  test_webhooks.py
tests/e2e/: conftest.py  test_login.py  test_navigation.py  test_sessions_e2e.py  test_users_e2e.py
tests/security/: README.md  zap_scan.py
(+38 files in other folders)
