[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monsterops"
version = "1.12.0"
description = "A simple, modular GUI for FreeRADIUS to replace daloRADIUS"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.3.0",
    "bcrypt>=4.0.0",
    "argon2-cffi>=23.1.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.9",
    "pyrad>=2.4",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
    "apscheduler>=3.10,<4",
    "geoip2>=4.8.0",
    "cryptography>=42.0.0",
    "netmiko>=4.0.0",
    "ldap3>=2.9.1",
]

[project.scripts]
monsterops = "monsterops.cli:main"

[project.entry-points."monsterops.plugins"]
# third-party plugins register here

[tool.hatch.build.targets.wheel]
packages = ["monsterops"]
artifacts = ["monsterops/static/**"]
