[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monsterops"
version = "1.12.2"
description = "A self-hosted network operations platform built around FreeRADIUS"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "NLRI65000", email = "nlrigithub@hotmail.com" }]
requires-python = ">=3.11"
keywords = ["freeradius", "radius", "daloradius", "aaa", "network", "authentication", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.3.0",
    "bcrypt>=4.0.0",
    "argon2-cffi>=23.1.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.9",
    "pyrad>=2.4",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
    "apscheduler>=3.10,<4",
    "geoip2>=4.8.0",
    "cryptography>=42.0.0",
    "netmiko>=4.0.0",
    "ldap3>=2.9.1",
]

[project.urls]
Homepage = "https://monsterops.org"
Documentation = "https://monsterops.org/docs/"
Repository = "https://github.com/NLRI65000/MonsterOps"
Issues = "https://github.com/NLRI65000/MonsterOps/issues"
Changelog = "https://github.com/NLRI65000/MonsterOps/blob/main/CHANGELOG.md"

[project.scripts]
monsterops = "monsterops.cli:main"

[project.entry-points."monsterops.plugins"]
# third-party plugins register here

[tool.hatch.build.targets.wheel]
packages = ["monsterops"]
artifacts = ["monsterops/static/**"]

# Bundle the Alembic migrations inside the installed package so a pip install can
# run `monsterops migrate` to create/upgrade its schema (the CLI resolves these).
[tool.hatch.build.targets.wheel.force-include]
"alembic" = "monsterops/alembic"
"alembic.ini" = "monsterops/alembic.ini"
